# hsi2rgb

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/database/: acquisitions.json  acquisitions_full.json  datasets.json
data/wavelengths/: aviris.csv  cave.csv  chikusei.csv  cuprite.csv  hydice.csv  hyperion.csv  indian_pines.csv  jasper_ridge.csv  moffett_field.csv  rosis.csv  samson.csv
src/: hsi2rgb.py  main.py
src/utilities/: database.py  image.py  lib.py  validators.py
