[tool.poetry]
name = "rgb-test"
version = "0.1.0"
description = ""
authors = ["Daniele Picone <danaroth83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
huggingface-hub = "^0.20.3"
pyqt5-tools = "^5.15.9.3.3"
scipy = "^1.12.0"
spectral = "^0.23.1"
scikit-image = "^0.22.0"
pydantic = "^2.6.3"
pint = "^0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

